@@ -50,3 +50,4 @@ Thanks
   * NANKI Haruo: some bug fix patches.
   * Paul van Tilburg: some patches that support ruby 1.9.
   * Binzo: some bug reports and fixed that.
+  * kimura wataru: some advices for RubyCocoa.
